# FileScanner

./: CMakeLists.txt  FirstStart.cpp  README.md  config.cpp  config.hpp  main.cpp  scanner.cfg  tests.odt  tests.txt
